--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
             <P>
                 Transport Contractor & Commission Agent
             </P>
-            <p2>
+            <p>
                 Ghodari, Dist-Mahasamund(CG) <br> Area pincode: 493445.
-            </p2>
+            </p>
             <div class="truck">
                 <img class="img1"
                     src="https://cms.eichertrucksandbuses.com/uploads/truck/sub-category/9a89ce245868a3d119545660854ed708.png"
                     alt="eicher-trucks-png-eicher-truck-11563206628hmaphm8kdt">
-                <a href="#contact"><button class="btn">Contact Us</button></a>
-                <img src="https://toppng.com/public/uploads/thumbnail/eicher-trucks-png-eicher-truck-11563206628hmaphm8kdt.png"
+                <a href="#contact"><button class="btn">Contact Us</button></a>  
+                <img class="img2" src="https://toppng.com/public/uploads/thumbnail/eicher-trucks-png-eicher-truck-11563206628hmaphm8kdt.png"
                     alt="eicher-Pro-6048H-eutech6-connected-truck">
             </div>
         </div>
@@ -53,7 +53,7 @@
         <h1>About</h1>
         <div class="about">
             <img src="photo1.jpg" alt="photo">
-            <p>
+            <p class="about-p">
                 Welcome to Anurag Transport, founded by Dilesh Chaure. We excel as a transport contractor and commission
                 agent, dedicated to providing efficient, reliable, and cost-effective transport solutions. Our services
                 include full and partial truckloads, with a focus on safety and timely delivery. Our experienced team
